--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,6 +31,11 @@ rel="stylesheet"
 integrity="sha384-KyZXEJwQ3f8kC6CzTshhjXhF7mzsh6I4xv9FkGVll3mT10Jf7t5aG36FvVtI6ZlK"
 crossorigin="anonymous"
 />
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+/>
+
 <script
   src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-pzjw8f+ua7Kw1TIq0v8FqA1fFJ9KLfiv8Oewc9I52i5D0z7InVh+AMM4Gi46t8n4"
